#724 Implement opt-in feature to expose packages, and functions and procedures in packages via normal database metadata